--- a/pixiv.conf
+++ b/pixiv.conf
@@ -32,17 +32,14 @@ upstream imgaz-pixiv-net {
 }
 
 upstream i-pximg-net {
-    server 210.140.92.140:443;
-    server 210.140.92.137:443;
-    server 210.140.92.139:443;
-    server 210.140.92.142:443;
-    server 210.140.92.134:443;
-    server 210.140.92.141:443;
-    server 210.140.92.143:443;
-    server 210.140.92.136:443;
-    server 210.140.92.138:443;
-    server 210.140.92.144:443;
-    server 210.140.92.145:443;
+    server 210.140.139.129:443;
+    server 210.140.139.130:443;
+    server 210.140.139.131:443;
+    server 210.140.139.132:443;
+    server 210.140.139.133:443;
+    server 210.140.139.134:443;
+    server 210.140.139.135:443;
+    server 210.140.139.136:443; 
 }
 
 upstream app-api-pixiv-net {
@@ -112,15 +109,15 @@ server {
     ssl_certificate_key ca/pixiv.net.key;
 
     location / {
-        rewrite ^/(.*)$ https://i.pixiv.cat/$1 redirect;
+        # rewrite ^/(.*)$ https://i.pixiv.cat/$1 redirect;
 
-        # proxy_pass https://i-pximg-net;
-        # proxy_set_header Host $http_host;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Real_IP $remote_addr;
-        # proxy_set_header User-Agent $http_user_agent;
-        # proxy_set_header Accept-Encoding '';
-        # proxy_buffering off;
+        proxy_pass https://i-pximg-net;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real_IP $remote_addr;
+        proxy_set_header User-Agent $http_user_agent;
+        proxy_set_header Accept-Encoding '';
+        proxy_buffering off;
     }
 }
 
